@@ -1,3 +1,6 @@
+**2013 Mar 15**
+Added module for Database Consistency
+
 **2013 Mar 06**
 merged branch copy/mpove
 updated branch to current functions
@@ -59,7 +62,7 @@ calls database close, logfile close on fs unmount
 Used stdbool.h as per c99 standard to define the boolean type
 
 **2013 Jan 25**
-Implemented function to Check Path Validity 
+Implemented function to Check Path Validity
 Refactor dbkey, extract_audio_taglib files
 Convert extracted tags to title case
 
